# panda3d-cli

./: .gitignore  README.md  pyproject.toml
p3d/: SKILL.md
src/p3d/: __init__.py  __main__.py  runner.py
src/p3d/cli/: __init__.py  _util.py  asset.py  camera.py  config.py  init_cmd.py  light.py  node.py  render.py  run.py  scene.py  screenshot.py  script_cmd.py  train.py
src/p3d/core/: __init__.py  project.py  rpc_methods.py  runtime_client.py  runtime_server.py  scene_builder.py  scene_serializer.py  script.py
